--- a/blog.html
+++ b/blog.html
@@ -241,6 +241,88 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
+                        <aside class="blog-sidebar">
+                            <div class="widget blog-widget">
+                                <div class="widget-title mb-30">
+                                    <h5 class="title">Search Objects</h5>
+                                </div>
+                                <form action="#" class="sidebar-search">
+                                    <input type="text" placeholder="Search...">
+                                    <button><i class="fas fa-search"></i></button>
+                                </form>
+                            </div>
+                            <div class="widget blog-widget">
+                                <div class="widget-title mb-30">
+                                    <h5 class="title">Categories</h5>
+                                </div>
+                                <div class="sidebar-cat">
+                                    <ul>
+                                        <li><a href="#">Movies</a> <span>12</span></li>
+                                        <li><a href="#">Action Movies</a> <span>10</span></li>
+                                        <li><a href="#">Streaming</a> <span>9</span></li>
+                                        <li><a href="#">Download</a> <span>16</span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="widget blog-widget">
+                                <div class="widget-title mb-30">
+                                    <h5 class="title">Recent Posts</h5>
+                                </div>
+                                <div class="rc-post">
+                                    <ul>
+                                        <li class="rc-post-item">
+                                            <div class="thumb">
+                                                <a href="blog-details.html"><img
+                                                        src="assets/img/blog/rc_post_thumb01.jpg" alt=""></a>
+                                            </div>
+                                            <div class="content">
+                                                <h5 class="title"><a href="blog-details.html">Express Management
+                                                        Effective</a></h5>
+                                                <span class="date"><i class="far fa-clock"></i> 10 Mar 2021</span>
+                                            </div>
+                                        </li>
+                                        <li class="rc-post-item">
+                                            <div class="thumb">
+                                                <a href="blog-details.html"><img
+                                                        src="assets/img/blog/rc_post_thumb02.jpg" alt=""></a>
+                                            </div>
+                                            <div class="content">
+                                                <h5 class="title"><a href="blog-details.html">Where watch English movies
+                                                        free?</a></h5>
+                                                <span class="date"><i class="far fa-clock"></i> 10 Mar 2021</span>
+                                            </div>
+                                        </li>
+                                        <li class="rc-post-item">
+                                            <div class="thumb">
+                                                <a href="blog-details.html"><img
+                                                        src="assets/img/blog/rc_post_thumb03.jpg" alt=""></a>
+                                            </div>
+                                            <div class="content">
+                                                <h5 class="title"><a href="blog-details.html">House movie streaming
+                                                        website</a></h5>
+                                                <span class="date"><i class="far fa-clock"></i> 10 Mar 2021</span>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="widget blog-widget">
+                                <div class="widget-title mb-30">
+                                    <h5 class="title">Tag Post</h5>
+                                </div>
+                                <div class="tag-list">
+                                    <ul>
+                                        <li><a href="#">Movies</a></li>
+                                        <li><a href="#">Creative</a></li>
+                                        <li><a href="#">News</a></li>
+                                        <li><a href="#">Romantic</a></li>
+                                        <li><a href="#">Who</a></li>
+                                        <li><a href="#">English</a></li>
+                                        <li><a href="#">Blending</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </aside>
                     </div>
                 </div>
             </div>
