--- a/contacts.html
+++ b/contacts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="">
 
 <head>
   <meta charset="UTF-8" />
@@ -46,7 +46,7 @@
 
 </head>
 
-<body data-aos-easing="ease" data-aos-duration="1000" data-aos-delay="0">
+<body>
   <button class="scroll-top scroll-to-target" data-target="html">
     <i class="fas fa-angle-up"></i>
   </button>
@@ -69,9 +69,9 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="movie.html">Movie</a></li>
                     <li><a href="tvShows.html">tv show</a></li>
-                    <li class="active"><a href="pricing.html">Pricing</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="blog.html">blog</a></li>
-                    <li><a href="contacts.html">contacts</a></li>
+                    <li class="active"><a href="contacts.html">contacts</a></li>
                   </ul>
                 </div>
                 <div class="header-action d-none d-md-block">
@@ -120,18 +120,22 @@
       </div>
     </div>
   </header>
+
   <main>
-    <section class="breadcrumb-area breadcrumb-bg" data-background="assets/img/bg/breadcrumb_bg.jpg"
-      style="background-image: url(&quot;assets/img/bg/breadcrumb_bg.jpg&quot;);">
+    <section class="breadcrumb-area breadcrumb-bg" data-background="assets/img/bg/breadcrumb_bg.jpg">
       <div class="container">
         <div class="row">
           <div class="col-12">
             <div class="breadcrumb-content">
-              <h2 class="title">Our Plan</h2>
+              <h2 class="title">Contact Us</h2>
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Pricing</li>
+                  <li class="breadcrumb-item">
+                    <a href="index.html">Home</a>
+                  </li>
+                  <li class="breadcrumb-item active" aria-current="page">
+                    Contact
+                  </li>
                 </ol>
               </nav>
             </div>
@@ -139,83 +143,62 @@
         </div>
       </div>
     </section>
-    <section class="pricing-area pricing-bg" data-background="assets/img/bg/pricing_bg.jpg"
-      style="background-image: url(&quot;assets/img/bg/pricing_bg.jpg&quot;);">
+
+    <section class="contact-area contact-bg" data-background="assets/img/bg/contact_bg.jpg">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-8">
-            <div class="section-title title-style-three text-center mb-70">
-              <span class="sub-title">our pricing plans</span>
-              <h2 class="title">Our Pricing Strategy</h2>
+        <div class="row">
+          <div class="col-xl-8 col-lg-7">
+            <div class="contact-form-wrap">
+              <div class="widget-title mb-50">
+                <h5 class="title">Contact Form</h5>
+              </div>
+              <div class="contact-form">
+                <form action="#">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <input type="text" placeholder="Your Name *" />
+                    </div>
+                    <div class="col-md-6">
+                      <input type="email" placeholder="Your  Email *" />
+                    </div>
+                  </div>
+                  <input type="text" placeholder="Subject *" />
+                  <textarea name="message" placeholder="Type Your Message..."></textarea>
+                  <button class="btn">Send Message</button>
+                </form>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="pricing-box-wrap">
-          <div class="row justify-content-center">
-            <div class="col-lg-4 col-md-6 col-sm-8">
-              <div class="pricing-box-item mb-30">
-                <div class="pricing-top">
-                  <h6>premium</h6>
-                  <div class="price">
-                    <h3>$7.99</h3>
-                    <span>Monthly</span>
-                  </div>
-                </div>
-                <div class="pricing-list">
-                  <ul>
-                    <li class="quality"><i class="fas fa-check"></i> Video quality <span>Good</span></li>
-                    <li><i class="fas fa-check"></i> Resolution <span>480p</span></li>
-                    <li><i class="fas fa-check"></i> Screens you can watch <span>1</span></li>
-                    <li><i class="fas fa-check"></i> Cancel anytime</li>
-                  </ul>
-                </div>
-                <div class="pricing-btn">
-                  <a href="#" class="btn">Buy Now</a>
-                </div>
-              </div>
+          <div class="col-xl-4 col-lg-5">
+            <div class="widget-title mb-50">
+              <h5 class="title">Information</h5>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-8">
-              <div class="pricing-box-item active mb-30">
-                <div class="pricing-top">
-                  <h6>standard</h6>
-                  <div class="price">
-                    <h3>$9.99</h3>
-                    <span>Monthly</span>
-                  </div>
-                </div>
-                <div class="pricing-list">
-                  <ul>
-                    <li class="quality"><i class="fas fa-check"></i> Video quality <span>Better</span></li>
-                    <li><i class="fas fa-check"></i> Resolution <span>1080p</span></li>
-                    <li><i class="fas fa-check"></i> Screens you can watch <span>2</span></li>
-                    <li><i class="fas fa-check"></i> Cancel anytime</li>
-                  </ul>
-                </div>
-                <div class="pricing-btn">
-                  <a href="#" class="btn">Buy Now</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-8">
-              <div class="pricing-box-item mb-30">
-                <div class="pricing-top">
-                  <h6>premium</h6>
-                  <div class="price">
-                    <h3>$11.99</h3>
-                    <span>Monthly</span>
-                  </div>
-                </div>
-                <div class="pricing-list">
-                  <ul>
-                    <li class="quality"><i class="fas fa-check"></i> Video quality <span>Best</span></li>
-                    <li><i class="fas fa-check"></i> Resolution <span>4K+HDR</span></li>
-                    <li><i class="fas fa-check"></i> Screens you can watch <span>4</span></li>
-                    <li><i class="fas fa-check"></i> Cancel anytime</li>
-                  </ul>
-                </div>
-                <div class="pricing-btn">
-                  <a href="#" class="btn">Buy Now</a>
-                </div>
+            <div class="contact-info-wrap">
+              <p>
+                <span>Find solutions :</span> to common problems, or get help
+                from a support agent industry's standard .
+              </p>
+              <div class="contact-info-list">
+                <ul>
+                  <li>
+                    <div class="icon">
+                      <i class="fas fa-map-marker-alt"></i>
+                    </div>
+                    <p><span>Address :</span> W38 Park Road New York</p>
+                  </li>
+                  <li>
+                    <div class="icon"><i class="fas fa-phone-alt"></i></div>
+                    <p><span>Phone :</span> (09) 123 854 365</p>
+                  </li>
+                  <li>
+                    <div class="icon"><i class="fas fa-envelope"></i></div>
+                    <p>
+                      <span>Email :</span>
+                      <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
+                        data-cfemail="d2a1a7a2a2bda0a692bfbda4b4beaafcb1bdbf">[email&#160;protected]</a>
+                    </p>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
@@ -223,8 +206,13 @@
       </div>
     </section>
 
-    <section class="newsletter-area newsletter-bg" data-background="assets/img/bg/newsletter_bg.jpg"
-      style="background-image: url(&quot;assets/img/bg/newsletter_bg.jpg&quot;);">
+    <div id="map" style="width: 100%">
+      <iframe width="100%" height="439" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+        src="https://maps.google.com/maps?width=100%25&amp;height=700&amp;hl=en&amp;q=Aff%20Business%20House+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+      </iframe>
+    </div>
+
+    <section class="newsletter-area newsletter-bg" data-background="assets/img/bg/newsletter_bg.jpg">
       <div class="container">
         <div class="newsletter-inner-wrap">
           <div class="row align-items-center">
@@ -236,7 +224,7 @@
             </div>
             <div class="col-lg-6">
               <form action="#" class="newsletter-form">
-                <input type="email" required="" placeholder="Enter your email">
+                <input type="email" required placeholder="Enter your email" />
                 <button class="btn">get started</button>
               </form>
             </div>
@@ -253,7 +241,7 @@
           <div class="row align-items-center">
             <div class="col-lg-3">
               <div class="footer-logo">
-                <a href="index.html"><img src="img/logo/logo2.png" alt="" /></a>
+                <a href="index.html"><img src="assets/img/logo/logo.png" alt="" /></a>
               </div>
             </div>
             <div class="col-lg-9">
@@ -322,29 +310,30 @@
           </div>
           <div class="col-lg-6 col-md-6">
             <div class="payment-method-img text-center text-md-right">
-              <img src="img/images/card_img.png" alt="img" />
+              <img src="assets/img/images/card_img.png" alt="img" />
             </div>
           </div>
         </div>
       </div>
     </div>
   </footer>
-</body>
 
-<script src="js/vendor/jquery-3.6.0.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/isotope.pkgd.min.js"></script>
-<script src="js/imagesloaded.pkgd.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.odometer.min.js"></script>
-<script src="js/jquery.appear.js"></script>
-<script src="js/slick.min.js"></script>
-<script src="js/ajax-form.js"></script>
-<script src="js/wow.min.js"></script>
-<script src="js/aos.js"></script>
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+  <script src="js/vendor/jquery-3.6.0.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/isotope.pkgd.min.js"></script>
+  <script src="js/imagesloaded.pkgd.min.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.odometer.min.js"></script>
+  <script src="js/jquery.appear.js"></script>
+  <script src="js/slick.min.js"></script>
+  <script src="js/ajax-form.js"></script>
+  <script src="js/wow.min.js"></script>
+  <script src="js/aos.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+</body>
 
 </html>
